Fix layout issue on mobile.

--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -72,8 +72,11 @@
 }
 
 #option-container {
+  width: fit-content;
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
+  justify-content: center;
 }
 
 footer {
